<resources>
    <string name="app_name">Sherr</string>
    <string name="google_map_key">AIzaSyAVr1n8-FFi3epiaUOXJclZboCGuvTkjBk</string>

    <string name="main">Main</string>
    <string name="search">Search</string>
    <string name="popular">Popular</string>
    <string name="chat">Chat</string>
    <string name="location">Location</string>
    <string name="positive_value">Positive $s</string>
    <string name="negative_value">Negative $s</string>
    <string name="description">Description</string>
    <string name="rent">Lease</string>
    <string name="msg">Message</string>
    <string name="profile">Profile</string>
    <string name="user">User</string>
    <string name="saved">Saved</string>

    <string name="name">Name</string>
    <string name="personal_data">Passport data</string>
    <string name="phone">Phone</string>
    <string name="comments">Comments</string>
    <string name="archive_title">Archive</string>
    <string name="communication">Communication</string>
    <string name="deadlines">Deadlines</string>
    <string name="positive">Positive</string>
    <string name="negative">Negative</string>
    <string name="filter">Filter</string>
    <string name="distance">Distance</string>
    <string name="pledge">Pledge</string>
    <string name="price">Price</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="uan">uah.</string>
    <string name="search_results">Search results</string>
    <string name="select_rubric">Select rubric</string>
    <string name="map">Map</string>
    <string name="write_a_message">Message…</string>
    <string name="city">City</string>
    <string name="my_location">My location</string>
    <string name="distance_value">%s km</string>
    <string name="price_value">%s uah / day</string>
    <string name="price_value1">%s uah</string>
    <string name="confirm">Confirm</string>
    <string name="price_day">Cost per day</string>
    <string name="rent_start_date">Rental start</string>
    <string name="rent_end_date">Rental end</string>
    <string name="total">Total:</string>
    <string name="comment">Comment</string>
    <string name="done">Done</string>
    <string name="contract_rent">Lease contract</string>
    <string name="accept_contract">I accept the terms of the contract</string>
    <string name="contract_msg">After confirmation, your rental request will be sent to %s. After confirmation, the money will be debited from your account and reserved in the account.</string>
    <string name="set_rating">Rate %s</string>
    <string name="write_comment">Enter your review</string>
    <string name="last_requests">Recent requests</string>
    <string name="select_region">Select region</string>
    <string name="add">Add</string>
    <string name="balance">Balance</string>
    <string name="active">Active</string>
    <string name="archive">Archive</string>
    <string name="term_rent">Rental period</string>
    <string name="help">Help</string>
    <string name="exit">Exit</string>
    <string name="account">Account</string>
    <string name="verify">Verify</string>
    <string name="verify_ok">Pass verification</string>
    <string name="verify_photo">Take a photo of the first page of your passport</string>
    <string name="verify_photo2">Take a photo of registration</string>
    <string name="title">Title</string>
    <string name="enter_title">Enter title</string>
    <string name="geolocation">Geolocation</string>
    <string name="private_or_business">Private or business</string>
    <string name="next">Next</string>
    <string name="rubric">Rubric</string>
    <string name="provide_daily_price">Provide daily price</string>
    <string name="insurance">Insurance</string>
    <string name="specify_the_amount_of_insurance">Specify the amount of insurance</string>
    <string name="tenant_passport_details">Tenant passport details</string>
    <string name="i_agree_with_license_agreement">I agree with license agreement</string>
    <string name="lease_contract">Lease contract</string>
    <string name="preview">Preview</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="announcement">Announcement</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="key_word">Key word</string>
    <string name="category">Category</string>
    <string name="show">Show</string>
    <string name="favorites">Favorites</string>
    <string name="requisites">Requisites</string>
    <string name="card_code">Card code</string>
    <string name="enter_card_details">Enter card details</string>
    <string name="_0000">0000</string>
    <string name="expiration_date">Expiration date</string>
    <string name="_00_00">00/00</string>
    <string name="cvv">CVV</string>
    <string name="_000">000</string>
    <string name="pay_1s">Pay (%1s)</string>
    <string name="cancel">Cancel</string>
    <string name="pay">Pay</string>
    <string name="bank_card">Bank card</string>
    <string name="actions">Actions</string>
    <string name="activate">Activate</string>
    <string name="advertise">Advertise</string>
    <string name="to_chat">Go to chat</string>

    <string name="enter_name">Введите имя</string>
    <string name="enter_email">Введите Email</string>
    <string name="enter_password">Пароль</string>

    <string name="authorization">Вход</string>
    <string name="registration">Регистрация</string>
    <string name="сancel">Отмена</string>
    <string name="exit_ru">Выход</string>
    <string name="exit_hint">Вы действительно хотите выйти своего аккаунта?</string>

    <string name="rent_dialog_hint">Для аренды Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="send_msg_dialog_main">Для отправки сообщений Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="favorites_dialog">Для просмотра вкладки "Избранное" Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="profile_dialog">Для просмотра своего профиля Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="add_order_dialog">Для добавления товара Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="send_msg_dialog_hint">Для отправки сообщения пользователю %s Вам необходимо пройти регистрацию, если у Вас уже есть аккаун нажмите кнопку Вход</string>
    <string name="all_in_category">Все в категории %s</string>
    <string name="registration_hint">Для регистрации воспользуйтесь одной из социальных сетей</string>
    <string name="authorization_hint">Для входа в систему воспользуйтесь одной из социальных сетей</string>

</resources>
