<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.authorization.AuthorizationFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:paddingStart="@dimen/text_margin"
        android:paddingEnd="@dimen/text_margin"
        android:textSize="@dimen/text_header"
        app:fontFamily="@font/bold"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/authorization"
        app:titleTextColor="@color/white"
        tools:layout_height="48dp" />

    <ImageView
        android:id="@+id/logo_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toTopOf="@+id/logo_text_view"/>

    <TextView
        android:id="@+id/logo_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textColor="@color/white"
        app:fontFamily="@font/bold"
        app:layout_constraintTop_toBottomOf="@+id/logo_image_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintBottom_toTopOf="@+id/authorization_hint"/>

    <TextView
        android:id="@+id/authorization_hint"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/white"
        app:fontFamily="@font/bold"
        app:layout_constraintBottom_toTopOf="@+id/user_email_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/logo_text_view"
        android:text="@string/authorization_hint" />

    <EditText
        android:id="@+id/user_email_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/white_btn"
        android:gravity="center"
        android:hint="@string/enter_email"
        android:inputType="textEmailAddress"
        android:maxLength="80"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/user_password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/authorization_hint" />

    <EditText
        android:id="@+id/user_password_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:background="@drawable/white_btn"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/user_email_edit_text" />

    <TextView
        android:id="@+id/authorization_clickable_text_view"
        android:layout_width="0dp"
        android:clickable="true"
        android:focusable="true"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="24dp"
        android:background="@drawable/orange_btn"
        android:paddingTop="12dp"
        android:paddingBottom="12dp"
        android:text="@string/authorization"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/user_password_edit_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/text_margin_24" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/text_margin_24" />

</androidx.constraintlayout.widget.ConstraintLayout>