<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mainToolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.main.ui.MainFragment">

    <com.un.sherr.custom.views.MainToolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:elevation="0dp"
        mainToolbar:resource="@drawable/ic_cross"
        mainToolbar:text="@string/requisites" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_page_bg"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <include layout="@layout/line_small_margin" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/text_margin"
                android:paddingEnd="@dimen/text_margin">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/text_margin"
                    android:fontFamily="@font/medium"
                    android:text="@string/enter_card_details"
                    android:textColor="@color/text_light" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="@drawable/primary_btn"
                    android:orientation="vertical"
                    android:padding="@dimen/text_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:text="@string/card_code"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et1"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@drawable/white_btn"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:hint="@string/_0000"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingTop="@dimen/padding"
                            android:paddingBottom="@dimen/padding" />

                        <EditText
                            android:id="@+id/et2"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin"
                            android:layout_weight="1"
                            android:background="@drawable/white_btn"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:hint="@string/_0000"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingTop="@dimen/padding"
                            android:paddingBottom="@dimen/padding" />

                        <EditText
                            android:id="@+id/et3"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin"
                            android:layout_weight="1"
                            android:background="@drawable/white_btn"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:hint="@string/_0000"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingTop="@dimen/padding"
                            android:paddingBottom="@dimen/padding" />

                        <EditText
                            android:id="@+id/et4"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="@dimen/text_margin"
                            android:layout_weight="1"
                            android:background="@drawable/white_btn"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:hint="@string/_0000"
                            android:inputType="number"
                            android:maxLength="4"
                            android:paddingTop="@dimen/padding"
                            android:paddingBottom="@dimen/padding" />


                    </LinearLayout>

                    <View
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/medium"
                        android:text="@string/expiration_date"
                        android:textColor="@color/white" />

                    <EditText
                        android:id="@+id/et5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/text_margin"
                        android:background="@drawable/white_btn"
                        android:gravity="center"
                        android:hint="@string/_00_00"
                        android:inputType="number"
                        android:maxLength="5"
                        android:paddingStart="@dimen/text_margin"
                        android:paddingTop="@dimen/padding"
                        android:paddingEnd="@dimen/text_margin"
                        android:paddingBottom="@dimen/padding" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="220dp"
                    android:layout_marginTop="@dimen/text_margin"
                    android:background="@drawable/primary_btn"
                    android:orientation="vertical"
                    android:padding="@dimen/text_margin">

                    <View
                        android:layout_width="1dp"
                        android:layout_height="0dp"
                        android:layout_weight="1" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="4dp"
                        android:fontFamily="@font/medium"
                        android:gravity="end"
                        android:text="@string/cvv"
                        android:textColor="@color/white" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_weight="1" />

                        <EditText
                            android:id="@+id/et6"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="@dimen/text_margin"
                            android:background="@drawable/white_btn"
                            android:fontFamily="@font/medium"
                            android:gravity="center"
                            android:hint="@string/_000"
                            android:inputType="number"
                            android:maxLength="3"
                            android:paddingStart="@dimen/text_margin"
                            android:paddingTop="@dimen/padding"
                            android:paddingEnd="@dimen/text_margin"
                            android:paddingBottom="@dimen/padding" />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="@dimen/text_margin_24"
                android:layout_marginBottom="@dimen/text_margin"
                android:orientation="horizontal"
                android:paddingStart="@dimen/text_margin"
                android:paddingEnd="@dimen/text_margin">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/padding"
                    android:layout_weight="1"
                    android:background="@drawable/gray_btn"
                    android:gravity="center"
                    android:padding="@dimen/text_margin"
                    android:text="@string/cancel"
                    android:textColor="@color/white"
                    app:fontFamily="@font/demibold" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/padding"
                    android:layout_weight="1"
                    android:background="@drawable/orange_btn"
                    android:gravity="center"
                    android:padding="@dimen/text_margin"
                    android:text="@string/pay_1s"
                    android:textColor="@color/white"
                    app:fontFamily="@font/demibold" />

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>
