<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:mainToolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.main.MainFragment">

    <com.un.sherr.custom.views.MainToolbar
        android:id="@+id/mainToolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:colorBackground"
        app:elevation="0dp"
        mainToolbar:text="@string/favorites" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/primary_page_bg"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/text_margin"
            android:orientation="horizontal"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin">

            <TextView
                android:id="@+id/tvAnnouncement"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/padding"
                android:layout_weight="1"
                android:background="@drawable/orange_btn"
                android:fontFamily="@font/demibold"
                android:gravity="center"
                android:padding="@dimen/text_margin"
                android:text="@string/announcement"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

            <TextView
                android:id="@+id/tvSearch"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding"
                android:layout_weight="1"
                android:background="@drawable/gray_btn"
                android:fontFamily="@font/demibold"
                android:gravity="center"
                android:padding="@dimen/text_margin"
                android:text="@string/search"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16" />

        </LinearLayout>

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vpFavorites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="@dimen/text_margin"
            android:paddingStart="@dimen/text_margin"
            android:paddingEnd="@dimen/text_margin" />

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>